--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "express": "^4.18.2",
+    "jsdom": "^22.1.0",
     "node-fetch": "^2.7.0",
     "puppeteer": "^21.3.4",
     "request": "^2.88.2"
